--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "url": "https://github.com/gatsbyjs/gatsby-starter-blog/issues"
   },
   "dependencies": {
+    "@material-ui/core": "^1.3.1",
     "algoliasearch": "^3.29.0",
     "gatsby": "next",
     "gatsby-plugin-algolia": "^0.0.4",
@@ -26,15 +27,27 @@
     "gatsby-transformer-remark": "next",
     "gatsby-transformer-sharp": "next",
     "lodash": "^4.17.5",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-easy-media-query": "^1.0.0",
+    "postcss-nested": "^3.0.0",
+    "postcss-text-remove-gap": "^1.1.1",
     "prismjs": "^1.15.0",
+    "prop-types": "*",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-helmet": "^5.2.0",
+    "react-icons": "^2.2.7",
+    "react-redux": "^5.0.7",
     "react-typography": "^0.16.13",
+    "redux": "^4.0.0",
+    "styled-jsx": "^2.2.7",
+    "styled-jsx-plugin-postcss": "^0.1.3",
+    "styled-jsx-plugin-stylelint": "^0.1.0",
     "typeface-merriweather": "0.0.43",
     "typeface-montserrat": "0.0.43",
     "typography": "^0.16.17",
-    "typography-theme-wordpress-2016": "^0.15.10"
+    "typography-theme-wordpress-2016": "^0.15.10",
+    "yaml-loader": "^0.5.0"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
