--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "react-helmet": "^5.2.0",
     "react-icons": "^2.2.7",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
     "react-typography": "^0.16.13",
     "redux": "^4.0.0",
+    "redux-devtools-extension": "^2.13.5",
     "styled-jsx": "^2.2.7",
     "styled-jsx-plugin-postcss": "^0.1.3",
     "styled-jsx-plugin-stylelint": "^0.1.0",
