--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^16.3.2",
     "react-helmet": "^5.2.0",
     "react-icons": "^2.2.7",
+    "react-lazyload": "^2.3.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-typography": "^0.16.13",
