--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@material-ui/core": "^1.3.1",
     "algoliasearch": "^3.29.0",
+    "babel-plugin-module-resolver": "^3.1.1",
     "gatsby": "next",
     "gatsby-plugin-algolia": "^0.0.4",
     "gatsby-plugin-feed": "next",
