--- a/package.json
+++ b/package.json
@@ -7,9 +7,17 @@
     "url": "https://github.com/gatsbyjs/gatsby-starter-blog/issues"
   },
   "dependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.53",
     "@material-ui/core": "^1.3.1",
     "algoliasearch": "^3.29.0",
+    "babel-eslint": "^8.2.6",
+    "babel-plugin-dynamic-import-webpack": "^1.0.2",
+    "babel-plugin-import": "^1.8.0",
     "babel-plugin-module-resolver": "^3.1.1",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "eslint-config-google": "^0.9.1",
+    "eslint-plugin-graphql": "^2.1.1",
+    "eslint-plugin-import": "^2.13.0",
     "gatsby": "next",
     "gatsby-plugin-algolia": "^0.0.4",
     "gatsby-plugin-feed": "next",
@@ -35,12 +43,15 @@
     "prismjs": "^1.15.0",
     "prop-types": "*",
     "react": "^16.3.2",
+    "react-async-component": "^2.0.0",
     "react-dom": "^16.3.2",
+    "react-facebook": "^5.0.3",
     "react-helmet": "^5.2.0",
     "react-icons": "^2.2.7",
     "react-lazyload": "^2.3.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "react-share": "^2.2.0",
     "react-typography": "^0.16.13",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
