--- a/src/theme/theme.yaml
+++ b/src/theme/theme.yaml
@@ -4,7 +4,7 @@ colors:
   background: &colors_background "#ffffff"
   white: &colors_white "#ffffff"
   accent: &colors_accent "#709425"
-  bright: &colors_briht "#ffffff"
+  bright: &colors_bright "#ffffff"
   dark: &colors_dark "#333333"
   gray: &colors_gray "#555555"
   lightGray: &colors_lightGray "#bbbbbb"
@@ -251,3 +251,14 @@ mediaQuery:
   s: "(max-width: 599px)"
   m: "(min-width: 600px)"
   l: "(min-width: 1024px)"
+
+
+footer:
+  fonts:
+    footnote:
+      size: 0.8em
+      lineHeight: 1.4
+  colors:
+    text: *colors_dark
+    link: *colors_accent
+    linkHove: *colors_lightGray
