--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-facebook": "^5.0.3",
     "react-helmet": "^5.2.0",
     "react-icons": "^2.2.7",
+    "react-instantsearch": "^5.2.0",
     "react-lazyload": "^2.3.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
