--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "url": "https://github.com/gatsbyjs/gatsby-starter-blog/issues"
   },
   "dependencies": {
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.53",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@material-ui/core": "^1.3.1",
     "algoliasearch": "^3.29.0",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.6",
+    "babel-loader": "7",
     "babel-plugin-dynamic-import-webpack": "^1.0.2",
     "babel-plugin-import": "^1.8.0",
     "babel-plugin-module-resolver": "^3.1.1",
+    "babel-preset-env": "^1.7.0",
     "dotenv": "^6.0.0",
     "eslint-config-google": "^0.9.1",
     "eslint-plugin-graphql": "^2.1.1",
@@ -36,6 +39,7 @@
     "gatsby-transformer-remark": "next",
     "gatsby-transformer-sharp": "next",
     "lodash": "^4.17.5",
+    "mime-types": "^2.1.20",
     "postcss-cssnext": "^3.1.0",
     "postcss-easy-media-query": "^1.0.0",
     "postcss-nested": "^3.0.0",
@@ -56,6 +60,9 @@
     "react-typography": "^0.16.13",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
+    "serverless": "^1.30.3",
+    "serverless-api-cloudfront": "^0.9.4",
+    "serverless-webpack": "^5.2.0",
     "styled-jsx": "^2.2.7",
     "styled-jsx-plugin-postcss": "^0.1.3",
     "styled-jsx-plugin-stylelint": "^0.1.0",
@@ -63,6 +70,9 @@
     "typeface-montserrat": "0.0.43",
     "typography": "^0.16.17",
     "typography-theme-wordpress-2016": "^0.15.10",
+    "webpack": "^4.17.1",
+    "webpack-cli": "^3.1.0",
+    "webpack-node-externals": "^1.7.2",
     "yaml-loader": "^0.5.0"
   },
   "devDependencies": {
