--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@material-ui/core": "^1.3.1",
     "algoliasearch": "^3.29.0",
-    "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.6",
-    "babel-loader": "7",
     "babel-plugin-dynamic-import-webpack": "^1.0.2",
     "babel-plugin-import": "^1.8.0",
     "babel-plugin-module-resolver": "^3.1.1",
@@ -21,37 +19,37 @@
     "eslint-config-google": "^0.9.1",
     "eslint-plugin-graphql": "^2.1.1",
     "eslint-plugin-import": "^2.13.0",
-    "gatsby": "next",
-    "gatsby-plugin-algolia": "^0.0.4",
-    "gatsby-plugin-feed": "next",
-    "gatsby-plugin-google-analytics": "next",
-    "gatsby-plugin-offline": "next",
-    "gatsby-plugin-react-helmet": "next",
-    "gatsby-plugin-sharp": "next",
-    "gatsby-plugin-typography": "next",
-    "gatsby-remark-autolink-headers": "^1.4.19",
-    "gatsby-remark-copy-linked-files": "next",
-    "gatsby-remark-images": "next",
-    "gatsby-remark-prismjs": "next",
-    "gatsby-remark-responsive-iframe": "next",
-    "gatsby-remark-smartypants": "next",
-    "gatsby-source-filesystem": "next",
-    "gatsby-transformer-remark": "next",
-    "gatsby-transformer-sharp": "next",
-    "lodash": "^4.17.5",
+    "gatsby": "~2.0.0-rc",
+    "gatsby-plugin-algolia": "~0.1.0",
+    "gatsby-plugin-feed": "~2.0.0-rc",
+    "gatsby-plugin-google-analytics": "~2.0.0-rc",
+    "gatsby-plugin-offline": "~2.0.0-rc",
+    "gatsby-plugin-react-helmet": "~3.0.0-rc",
+    "gatsby-plugin-sharp": "~2.0.0-rc",
+    "gatsby-plugin-typography": "~2.2.0-rc",
+    "gatsby-remark-autolink-headers": "~2.0.0-rc",
+    "gatsby-remark-copy-linked-files": "~2.0.0-rc",
+    "gatsby-remark-images": "~2.0.1-rc",
+    "gatsby-remark-prismjs": "~3.0.0-rc",
+    "gatsby-remark-responsive-iframe": "~2.0.0-rc",
+    "gatsby-remark-smartypants": "~2.0.0-rc",
+    "gatsby-source-filesystem": "~2.0.1-rc",
+    "gatsby-transformer-remark": "~2.1.1-rc",
+    "gatsby-transformer-sharp": "~2.1.1-rc",
+    "lodash": "^4.17.10",
     "mime-types": "^2.1.20",
     "postcss-cssnext": "^3.1.0",
     "postcss-easy-media-query": "^1.0.0",
     "postcss-nested": "^3.0.0",
     "postcss-text-remove-gap": "^1.1.1",
     "prismjs": "^1.15.0",
-    "prop-types": "*",
-    "react": "^16.3.2",
+    "prop-types": "~15.6.2",
+    "react": "~16.4.2",
     "react-async-component": "^2.0.0",
-    "react-dom": "^16.3.2",
+    "react-dom": "~16.4.2",
     "react-facebook": "^5.0.3",
     "react-helmet": "^5.2.0",
-    "react-icons": "^2.2.7",
+    "react-icons": "~3.0.5",
     "react-instantsearch": "^5.2.0",
     "react-lazyload": "^2.3.0",
     "react-redux": "^5.0.7",
