--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "url": "https://github.com/gatsbyjs/gatsby-starter-blog/issues"
   },
   "dependencies": {
+    "@babel/core": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@material-ui/core": "^1.3.1",
     "algoliasearch": "^3.29.0",
@@ -49,7 +50,7 @@
     "react-dom": "~16.4.2",
     "react-facebook": "^5.0.3",
     "react-helmet": "^5.2.0",
-    "react-icons": "~3.0.5",
+    "react-icons": "~2.2.7",
     "react-instantsearch": "^5.2.0",
     "react-lazyload": "^2.3.0",
     "react-redux": "^5.0.7",
@@ -77,6 +78,7 @@
     "eslint": "^4.19.1",
     "eslint-plugin-react": "^7.7.0",
     "gh-pages": "^1.1.0",
+    "nls": "^2.2.1",
     "prettier": "^1.12.0"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
