--- a/package.json
+++ b/package.json
@@ -20,23 +20,23 @@
     "eslint-config-google": "^0.9.1",
     "eslint-plugin-graphql": "^2.1.1",
     "eslint-plugin-import": "^2.13.0",
-    "gatsby": "~2.0.0-rc",
-    "gatsby-plugin-algolia": "~0.1.0",
-    "gatsby-plugin-feed": "~2.0.0-rc",
-    "gatsby-plugin-google-analytics": "~2.0.0-rc",
-    "gatsby-plugin-offline": "~2.0.0-rc",
-    "gatsby-plugin-react-helmet": "~3.0.0-rc",
-    "gatsby-plugin-sharp": "~2.0.0-rc",
-    "gatsby-plugin-typography": "~2.2.0-rc",
-    "gatsby-remark-autolink-headers": "~2.0.0-rc",
-    "gatsby-remark-copy-linked-files": "~2.0.0-rc",
-    "gatsby-remark-images": "~2.0.1-rc",
-    "gatsby-remark-prismjs": "~3.0.0-rc",
-    "gatsby-remark-responsive-iframe": "~2.0.0-rc",
-    "gatsby-remark-smartypants": "~2.0.0-rc",
-    "gatsby-source-filesystem": "~2.0.1-rc",
-    "gatsby-transformer-remark": "~2.1.1-rc",
-    "gatsby-transformer-sharp": "~2.1.1-rc",
+    "gatsby": "^2.1.27",
+    "gatsby-plugin-algolia": "^0.3.0",
+    "gatsby-plugin-feed": "^2.0.14",
+    "gatsby-plugin-google-analytics": "^2.0.16",
+    "gatsby-plugin-offline": "^2.0.24",
+    "gatsby-plugin-react-helmet": "^3.0.8",
+    "gatsby-plugin-sharp": "^2.0.25",
+    "gatsby-plugin-typography": "^2.2.8",
+    "gatsby-remark-autolink-headers": "^2.0.15",
+    "gatsby-remark-copy-linked-files": "^2.0.9",
+    "gatsby-remark-images": "^3.0.6",
+    "gatsby-remark-prismjs": "^3.2.4",
+    "gatsby-remark-responsive-iframe": "^2.0.9",
+    "gatsby-remark-smartypants": "^2.0.8",
+    "gatsby-source-filesystem": "^2.0.23",
+    "gatsby-transformer-remark": "^2.3.1",
+    "gatsby-transformer-sharp": "^2.1.15",
     "lodash": "^4.17.10",
     "mime-types": "^2.1.20",
     "postcss-cssnext": "^3.1.0",
@@ -79,7 +79,6 @@
     "eslint": "^4.19.1",
     "eslint-plugin-react": "^7.7.0",
     "gh-pages": "^1.1.0",
-    "nls": "^2.2.1",
     "prettier": "^1.12.0"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
