--- a/package.json
+++ b/package.json
@@ -45,9 +45,9 @@
     "postcss-text-remove-gap": "^1.1.1",
     "prismjs": "^1.15.0",
     "prop-types": "~15.6.2",
-    "react": "~16.4.2",
+    "react": "^16.8.4",
     "react-async-component": "^2.0.0",
-    "react-dom": "~16.4.2",
+    "react-dom": "^16.8.4",
     "react-facebook": "^5.0.3",
     "react-helmet": "^5.2.0",
     "react-icons": "~2.2.7",
