--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-plugin-import": "^1.8.0",
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-preset-env": "^1.7.0",
+    "cheerio": "^1.0.0-rc.2",
     "dotenv": "^6.0.0",
     "eslint-config-google": "^0.9.1",
     "eslint-plugin-graphql": "^2.1.1",
@@ -55,6 +56,7 @@
     "react-lazyload": "^2.3.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "react-scrollspy": "^3.4.0",
     "react-share": "^2.2.0",
     "react-typography": "^0.16.13",
     "react-utterances": "^0.6.0",
