--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@material-ui/core": "^1.3.1",
     "algoliasearch": "^3.29.0",
+    "aws-sdk": "^2.444.0",
+    "aws-serverless-express": "^3.3.6",
     "babel-eslint": "^8.2.6",
     "babel-plugin-dynamic-import-webpack": "^1.0.2",
     "babel-plugin-import": "^1.8.0",
@@ -21,6 +23,7 @@
     "eslint-config-google": "^0.9.1",
     "eslint-plugin-graphql": "^2.1.1",
     "eslint-plugin-import": "^2.13.0",
+    "express": "^4.16.4",
     "gatsby": "^2.1.27",
     "gatsby-plugin-algolia": "^0.3.0",
     "gatsby-plugin-feed": "^2.0.14",
@@ -39,7 +42,8 @@
     "gatsby-transformer-remark": "^2.3.1",
     "gatsby-transformer-sharp": "^2.1.15",
     "lodash": "^4.17.10",
-    "mime-types": "^2.1.20",
+    "mime-types": "^2.1.24",
+    "morgan": "^1.9.1",
     "postcss-cssnext": "^3.1.0",
     "postcss-easy-media-query": "^1.0.0",
     "postcss-nested": "^3.0.0",
@@ -81,7 +85,8 @@
     "eslint": "^4.19.1",
     "eslint-plugin-react": "^7.7.0",
     "gh-pages": "^1.1.0",
-    "prettier": "^1.12.0"
+    "prettier": "^1.12.0",
+    "serverless-offline": "^4.9.4"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
   "keywords": [
