--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   "dependencies": {
     "@babel/core": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/preset-env": "^7.4.4",
     "@material-ui/core": "^1.3.1",
     "algoliasearch": "^3.29.0",
     "aws-sdk": "^2.444.0",
     "aws-serverless-express": "^3.3.6",
     "babel-eslint": "^8.2.6",
+    "babel-loader": "^8.0.5",
     "babel-plugin-dynamic-import-webpack": "^1.0.2",
     "babel-plugin-import": "^1.8.0",
     "babel-plugin-module-resolver": "^3.1.1",
