--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-utterances": "^0.6.0",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
+    "serve-favicon": "^2.5.0",
     "serverless": "^1.30.3",
     "serverless-api-cloudfront": "^0.9.4",
     "serverless-webpack": "^5.2.0",
@@ -84,6 +85,9 @@
     "yaml-loader": "^0.5.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.4.4",
+    "@babel/node": "^7.2.2",
+    "copy-webpack-plugin": "^5.0.3",
     "eslint": "^4.19.1",
     "eslint-plugin-react": "^7.7.0",
     "gh-pages": "^1.1.0",
@@ -108,6 +112,7 @@
     "develop": "gatsby develop",
     "build": "gatsby build",
     "deploy": "gatsby build --prefix-paths && gh-pages -d public",
-    "fix-semi": "eslint --quiet --ignore-pattern node_modules --ignore-pattern public --parser babel-eslint --no-eslintrc --rule '{\"semi\": [2, \"never\"], \"no-extra-semi\": [2]}' --fix gatsby-node.js"
+    "fix-semi": "eslint --quiet --ignore-pattern node_modules --ignore-pattern public --parser babel-eslint --no-eslintrc --rule '{\"semi\": [2, \"never\"], \"no-extra-semi\": [2]}' --fix gatsby-node.js",
+    "listen": "babel-node --presets @babel/env listen.js"
   }
 }
