--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ orbs:
   aws-cli: circleci/aws-cli@0.1.13
 
 jobs:
-  build_only:
+  gatsby_build:
     working_directory: ~/repo
     docker:
       - image: circleci/node:10.15
@@ -39,5 +39,5 @@ workflows:
   version: 2
   build_s3copy:
     jobs:
-      - build
+      - gatsby_build
       - s3copy
