--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ orbs:
 
 jobs:
   gatsby_build:
-    working_directory: /tmp
+    working_directory: ~/repo
     docker:
       - image: circleci/node:10.15
     steps:
@@ -18,6 +18,7 @@ jobs:
           keys:
             - v1-dependencies-{{ checksum "package.json" }}-{{ checksum "yarn.lock" }}
       - run: &yarn_install_build |
+          pwd
           yarn install
           yarn run build
           ls -al
@@ -25,13 +26,15 @@ jobs:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}-{{ checksum "yarn.lock" }}
+
+      # https://circleci.com/docs/2.0/workflows/#using-workspaces-to-share-artifacts-among-jobs
       - persist_to_workspace:
           root: .
           paths:
             - public
 
   s3copy:
-    working_directory: /tmp
+    working_directory: ~/repo
     executor: aws-cli/default
     steps:
       - aws-cli/install
